# agentic-rag

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.py  build_index.py  docker-compose.yml  pyproject.toml  run_tests.py  test_app.py
sdk/python/: README.md  pyproject.toml  sample.py
sdk/python/agentic_rag_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: __init__.py  test_client.py  test_models.py
